<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/drawer_notices"
            android:icon="@drawable/ic_menu_notices"
            android:title="@string/notice" />
        <item
            android:id="@+id/drawer_materials"
            android:icon="@drawable/ic_menu_materials"
            android:title="@string/materials" />
        <item
            android:id="@+id/drawer_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/drawer_fees"
            android:icon="@drawable/ic_menu_fees"
            android:title="@string/fees" />
        <item
            android:id="@+id/drawer_enquiry"
            android:icon="@drawable/ic_menu_enquiry"
            android:title="@string/enquiry" />
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/logout" />
    </group>
</menu>
